Complete all codes

--- a/src/firesByMonth.ipynb
+++ b/src/firesByMonth.ipynb
@@ -415,7 +415,7 @@
        "      <th>Month</th>\n",
        "      <th>Jurisdiction</th>\n",
        "      <th>Number</th>\n",
-       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -464,7 +464,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Year     Month          Jurisdiction  Number       Date\n",
+       "      Year     Month          Jurisdiction  Number       Time\n",
        "0     1990   January               Alberta     1.0 1990-01-01\n",
        "3200  1990   January                Canada     1.0 1990-01-01\n",
        "74    1990   January  Prince Edward Island     0.0 1990-01-01\n",
@@ -478,11 +478,11 @@
     }
    ],
    "source": [
-    "# Create a datetime column from 'Year' and 'Month'\n",
-    "num['Date'] = pd.to_datetime(num['Month'] + ' ' + num['Year'].astype(str), format=\"%B %Y\")\n",
+    "# Create a Timetime column from 'Year' and 'Month'\n",
+    "num['Time'] = pd.to_datetime(num['Month'] + ' ' + num['Year'].astype(str), format=\"%B %Y\")\n",
     "\n",
-    "# Sort the dataframe by date\n",
-    "num = num.sort_values('Date')\n",
+    "# Sort the dataframe by Time\n",
+    "num = num.sort_values('Time')\n",
     "\n",
     "num.head(5)"
    ]
@@ -490,34 +490,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create a figure and an axis\n",
-    "# plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# # Loop over each unique jurisdiction\n",
-    "# for jurisdiction in num['Jurisdiction'].unique():\n",
-    "#     # Create a new dataframe for each jurisdiction\n",
-    "#     jurisdiction_df = num[num['Jurisdiction'] == jurisdiction]\n",
-    "#     # Plot 'Number' over time for the current jurisdiction\n",
-    "#     plt.plot(jurisdiction_df['Date'], jurisdiction_df['Number'], label=jurisdiction)\n",
-    "\n",
-    "# # Set the title and labels\n",
-    "# plt.title('Number of fires over Time')\n",
-    "# plt.xlabel('Date')\n",
-    "# plt.ylabel('Number')\n",
-    "\n",
-    "# # Add a legend\n",
-    "# plt.legend()\n",
-    "\n",
-    "# # Show the plot\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8413,7 +8385,7 @@
         },
         "xaxis": {
          "title": {
-          "text": "Date"
+          "text": "Time"
          }
         },
         "yaxis": {
@@ -8437,15 +8409,24 @@
     "    # Create a new dataframe for each jurisdiction\n",
     "    jurisdiction_df = num[num['Jurisdiction'] == jurisdiction]\n",
     "    # Add a line to the figure for the current jurisdiction\n",
-    "    fig_num.add_trace(go.Scatter(x= jurisdiction_df['Date'], y= jurisdiction_df['Number'], \n",
+    "    fig_num.add_trace(go.Scatter(x= jurisdiction_df['Time'], y= jurisdiction_df['Number'], \n",
     "                             mode='lines', name= jurisdiction))\n",
     "\n",
     "# Set the title and labels\n",
     "fig_num.update_layout(title='Number of Fires over Time', \n",
-    "                  xaxis_title='Date', yaxis_title='Number')\n",
+    "                  xaxis_title='Time', yaxis_title='Number')\n",
     "\n",
     "# Show the plot\n",
     "fig_num.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num.to_pickle('../data/NFD_Number_of_fires_by_month.pkl')"
    ]
   },
   {
@@ -8454,7 +8435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num.to_pickle('../data/NFD_Number_of_fires_by_month.pkl')"
+    "num.to_csv('../data/Cleaned_Number_of_fires_by_month.csv')"
    ]
   },
   {
@@ -8475,7 +8456,7 @@
       " 1   Month         3473 non-null   object        \n",
       " 2   Jurisdiction  3473 non-null   object        \n",
       " 3   Number        3434 non-null   float64       \n",
-      " 4   Date          3473 non-null   datetime64[ns]\n",
+      " 4   Time          3473 non-null   datetime64[ns]\n",
       "dtypes: datetime64[ns](1), float64(1), int64(1), object(2)\n",
       "memory usage: 162.8+ KB\n"
      ]
@@ -8513,7 +8494,7 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>Number</th>\n",
-       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -8570,7 +8551,7 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year       Number                           Date\n",
+       "              Year       Number                           Time\n",
        "count  3473.000000  3434.000000                           3473\n",
        "mean   2004.709185   127.317997  2005-03-08 17:42:16.481428224\n",
        "min    1990.000000     0.000000            1990-01-01 00:00:00\n",
@@ -8988,7 +8969,7 @@
        "      <th>Month</th>\n",
        "      <th>Jurisdiction</th>\n",
        "      <th>Area (hectares)</th>\n",
-       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -9037,7 +9018,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Year     Month          Jurisdiction  Area (hectares)       Date\n",
+       "      Year     Month          Jurisdiction  Area (hectares)       Time\n",
        "0     1990   January               Alberta              0.1 1990-01-01\n",
        "3200  1990   January                Canada              0.1 1990-01-01\n",
        "74    1990   January  Prince Edward Island              0.0 1990-01-01\n",
@@ -9052,10 +9033,10 @@
    ],
    "source": [
     "# Create a datetime column from 'Year' and 'Month'\n",
-    "area['Date'] = pd.to_datetime(area['Month'] + ' ' + area['Year'].astype(str), format=\"%B %Y\")\n",
+    "area['Time'] = pd.to_datetime(area['Month'] + ' ' + area['Year'].astype(str), format=\"%B %Y\")\n",
     "\n",
     "# Sort the dataframe by date\n",
-    "area = area.sort_values('Date')\n",
+    "area = area.sort_values('Time')\n",
     "\n",
     "area.head(5)"
    ]
@@ -16958,7 +16939,7 @@
         },
         "xaxis": {
          "title": {
-          "text": "Date"
+          "text": "Time"
          }
         },
         "yaxis": {
@@ -16982,12 +16963,12 @@
     "    # Create a new dataframe for each jurisdiction\n",
     "    jurisdiction_df_area = area[area['Jurisdiction'] == jurisdiction]\n",
     "    # Add a line to the figure for the current jurisdiction\n",
-    "    fig_area.add_trace(go.Scatter(x= jurisdiction_df_area['Date'], y= jurisdiction_df_area['Area (hectares)'], \n",
+    "    fig_area.add_trace(go.Scatter(x= jurisdiction_df_area['Time'], y= jurisdiction_df_area['Area (hectares)'], \n",
     "                             mode='lines', name= jurisdiction))\n",
     "\n",
     "# Set the title and labels\n",
     "fig_area.update_layout(title='Area Burned by Month', \n",
-    "                  xaxis_title='Date', yaxis_title='Area (hectares)')\n",
+    "                  xaxis_title='Time', yaxis_title='Area (hectares)')\n",
     "\n",
     "# Show the plot\n",
     "fig_area.show()"
@@ -17006,6 +16987,15 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "area.to_csv('../data/Cleaned_Area_burned_by_month.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -17020,7 +17010,7 @@
       " 1   Month            3473 non-null   object        \n",
       " 2   Jurisdiction     3473 non-null   object        \n",
       " 3   Area (hectares)  3427 non-null   float64       \n",
-      " 4   Date             3473 non-null   datetime64[ns]\n",
+      " 4   Time             3473 non-null   datetime64[ns]\n",
       "dtypes: datetime64[ns](1), float64(1), int64(1), object(2)\n",
       "memory usage: 162.8+ KB\n"
      ]
@@ -17032,7 +17022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -17167,7 +17157,7 @@
        "4                        a  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17179,7 +17169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -17191,7 +17181,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17202,7 +17192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -17275,7 +17265,7 @@
        "4  1970          Manitoba        2002.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17287,7 +17277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17296,7 +17286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -17369,7 +17359,7 @@
        "1171  2020       Canada    351580.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17387,7 +17377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17396,7 +17386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17405,7 +17395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -18936,11 +18926,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss.to_pickle('../data/NFD _Property_losses.pkl')"
+    "loss.to_pickle('../data/NFD_Property_losses.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss.to_csv('../data/Cleaned_Property_losses.csv')"
    ]
   }
  ],
